Fixed navbar Content alignment issues

--- a/RazorPagesAllegiant/Pages/Index.cshtml.css
+++ b/RazorPagesAllegiant/Pages/Index.cshtml.css
@@ -5,7 +5,11 @@
     animation: fadein 2s;
 }
 
-.container{
+.relpos{
+    position: relative;
+}
+
+.container {
     text-align: center;
     padding: 5%;
     border: 2px solid black;
