--- a/RazorPagesAllegiant/wwwroot/css/site.css
+++ b/RazorPagesAllegiant/wwwroot/css/site.css
@@ -16,7 +16,7 @@ html {
 
 body {
     margin: 0;
-    padding-top: 5%;
+    padding-top: 15%;
     height: 100%;
     font-family: Poppins, Roboto, Calibri;
     /*font-family: Roboto, Poppins, Calibri;*/
